--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0"
     />
-    <title>测试</title>
+    <title>统一网站登录</title>
     <style>
       * {
         margin: 0;
