--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           adm === window.zyingrui ||
           adm === window.lxuyao
         ) {
-          if (hex_md5(passwd) === window.pwd) {
+          if (passwd === window.pwd) {
             alert("安全覆屏已解除");
             window.location.href = "competitions.dugu.asia";
             alert("你好，正在跳转中");
