--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         ) {
           if (passwd === window.pwd) {
             alert("安全覆屏已解除");
-            window.location.href = "competitions.dugu.asia";
+            window.location.href = "https://competitions.dugu.asia";
             alert("你好，正在跳转中");
           } else {
             alert("!!无效的内容!!");
